-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.8.0
-
3
-
9223372036854775807
There are a number of inconsistencies in the command-line options between lfs find, lfs getstripe, and lfs setstripe/lfs migrate which are confusing and should be fixed, in a compatible manner, but deprecating the old options.
- lfs find and lfs migrate use -m to for mdt_index, but lfs getstripe uses -M to indicate mdt_index. getstripe should use -m and deprecate -M, since find uses -M for mtime.
- lfs setstripe uses --ost-list, but lfs find and lfs getstripe uses for --ost, but they are all conceptually the same thing. setstripe should just use --ost for this, and deprecate --ost-list as this option has only been around for a short time.
- lfs find uses --mdt to search for a specific mdt_index, but lfs getstripe and lfs migrate use --mdt-index. find should add --mdt-index (and --mdt_index for ease of use, but not document it), and getstripe and migrate should add --mdt.
I'm not sure of a clear winner between --mdt and --mdt-index, since I don't think --mdt is confusing and it parallels --ost for OST selection, and is short and convenient. Having both is not harmful I think.
The lfs setdirstripe and lfs getdirstripe options should also be expanded to be consistent with those in lfs find and lfs getstripe, namely, add --mdt-count|-c, --mdt-index|-m, --mdt-hash as aliases for the existing --count|-c and --index|-i and --hash-type|-t options. The long -count and -index options should be deprecated with LUSTRE_VERSION_CODE checks as they were for lfs_setstripe().
- is duplicated by
-
LU-9378 extract lfs-getstripe.1 from lfs.1
-
- Resolved
-
- is related to
-
LU-7503 "-v" is missing for "lfs migrate -m"
-
- Resolved
-
-
LU-10856 running sanity now prints "warning: '-M' deprecated, use '--mdt-index' or '-m' instead" billions of times
-
- Resolved
-
-
LU-11891 make --mdt-index usage consistent
-
- Resolved
-
-
LU-15276 DNE3: "lfs find" able to check default directory and file layout
-
- Open
-
- is related to
-
LU-7502 add lfs find --mdt-count and --mdt-hash options
-
- Resolved
-